Crash when starting CUDA kernel compilation if UI translation is not "Default" #32819

Closed
opened 2012-10-08 12:58:43 +02:00 by Shinsuke Irie · 8 comments
Member

%%%I found that CUDA kernel compilation leads Blender to crash as follows if international fonts are enabled and UI language is not "Default" (such as "English" and "Japanese"):

Compiling CUDA kernel ...
terminate called after throwing an instance of 'std::runtime_error'

what():  locale::facet::_S_create_c_locale name not valid

Aborted (core dumped)

See backtrace (blender_CUDA_kernel_compilation_abort.txt) for more detail.

r51176
Ubuntu 12.10 beta
libc6 2.15-0ubuntu20
Boost 1.49.0.1
CUDA Toolkit 4.2.9-1ubuntu1
NVIDIA Diver 304.51-0ubuntu1
Core i7 870
GeForce GT610
%%%

%%%I found that CUDA kernel compilation leads Blender to crash as follows if international fonts are enabled and UI language is not "Default" (such as "English" and "Japanese"): Compiling CUDA kernel ... terminate called after throwing an instance of 'std::runtime_error' ``` what(): locale::facet::_S_create_c_locale name not valid ``` Aborted (core dumped) See backtrace (blender_CUDA_kernel_compilation_abort.txt) for more detail. r51176 Ubuntu 12.10 beta libc6 2.15-0ubuntu20 Boost 1.49.0.1 CUDA Toolkit 4.2.9-1ubuntu1 NVIDIA Diver 304.51-0ubuntu1 Core i7 870 GeForce GT610 %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Oops, forgot to mention:

GCC 4:4.7.2-1ubuntu2
libstdc++6 4.7.2-2ubuntu1
%%%

%%%Oops, forgot to mention: GCC 4:4.7.2-1ubuntu2 libstdc++6 4.7.2-2ubuntu1 %%%

%%%Couldn't redo the issue with own build, or official build (with kernels removed from 2.64/scripts/addons/cycles/lib/). That's on Ubuntu 12.04.

Does it crash for you with the official build (with/without kernels removed)? Does it work OK after the kernel is compiled and you switch to a non-default language then?%%%

%%%Couldn't redo the issue with own build, or official build (with kernels removed from 2.64/scripts/addons/cycles/lib/). That's on Ubuntu 12.04. Does it crash for you with the official build (with/without kernels removed)? Does it work OK after the kernel is compiled and you switch to a non-default language then?%%%
Author
Member

%%%The problem happens after I upgraded Ubuntu to 12.10. The official build also crashes if pre-compiled kernels were removed.

Existing CUDA kernels work correctly even if UI language is non-default. The crash happens only when kernel compilation is going to start.

I confirmed that OpenCL kernel compilation also causes the crash.
%%%

%%%The problem happens after I upgraded Ubuntu to 12.10. The official build also crashes if pre-compiled kernels were removed. Existing CUDA kernels work correctly even if UI language is non-default. The crash happens only when kernel compilation is going to start. I confirmed that OpenCL kernel compilation also causes the crash. %%%

%%%Can confirm crash with LANG=ja_JP.UTF-8. Looking into this.%%%

%%%Can confirm crash with LANG=ja_JP.UTF-8. Looking into this.%%%

%%%Looks like setting current locale to full name by default (ja_JP.UTF-8 instead of ja_JP) fixes the issue. Didn't commit it yet to make some additional tests. Meanwhile patch is available here in the attachments.%%%

%%%Looks like setting current locale to full name by default (ja_JP.UTF-8 instead of ja_JP) fixes the issue. Didn't commit it yet to make some additional tests. Meanwhile patch is available here in the attachments.%%%

%%%Fix commited to svn rev51362.
Thanks for the report, closing.%%%

%%%Fix commited to svn rev51362. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32819
No description provided.